--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
 *,
 *::before,
 *::after {
@@ -7,7 +7,32 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  font-size: 62.5%;
+}
 
 body {
   font-family: "Inter", sans-serif;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  outline: none;
+  border: 0;
+  border-radius: 0.5rem;
+  font-size: 1.6rem;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #bbb;
+}
+::-webkit-scrollbar-track {
+  background-color: #dbdbdb;
 }
