--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -1,6 +1,33 @@
+.appContainer {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .app {
   display: flex;
-  gap: 29.6rem;
+  justify-content: space-between;
+  align-items: center;
+  width: 90rem;
+}
+
+@media only screen and (max-width: 1000px) {
+  .app {
+    width: 70rem;
+  }
+}
+@media only screen and (max-width: 750px) {
+  html {
+    font-size: 55%;
+  }
+  .appContainer {
+    height: auto;
+    padding: 3rem;
+  }
+  .app {
+    flex-direction: column;
+  }
 }
 
 .headingMain {
@@ -10,6 +37,14 @@
 
 .card {
   width: 43rem;
+}
+@media only screen and (max-width: 400px) {
+  .card {
+    width: 37rem;
+  }
+  html {
+    font-size: 50%;
+  }
 }
 
 .bgImage {
@@ -34,7 +69,7 @@
 }
 
 .date {
-  font-size: 4.8rem;
+  font-size: 4.3rem;
   line-height: 5.78rem;
 }
 
@@ -81,7 +116,7 @@
 
 .todosContainer {
   margin-bottom: 2rem;
-  height: 20rem;
+  max-height: 20rem;
   overflow-y: auto;
 }
 
